updated css for cart, fixed horizontal scrolling in mobile view

--- a/css/p4-style.css
+++ b/css/p4-style.css
@@ -3,49 +3,46 @@ body{
     background-image: url("https://images.pexels.com/photos/4022091/pexels-photo-4022091.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
-.title{
-    font-family: inherit;
-    text-align: center; 
-    color: white;
-    justify-content: center;
-}
 
 header{
     width:100%;
     background-color:white;
 }
 
-#wrapper{
-  justify-content:center;
-    margin: auto;
-    align-content: center;
-    display: table;
-    width:fit-content;
-}
-
-.shopping-cart{
-    width: relative; 
-    float: left;
-    display:relative;
+.title{
+    font-family: inherit;
+    text-align: center; 
+    color: white;
+    justify-content: center;
+    display:fixed;
     
 }
 
-.quantity{
-      width:90px;
-  }
-  
-
-.order-summary{
-    position: relative;
-      width: 100%;
-      max-width: 300px;
-      float:right;
+.shopping-cart{
+   
+    display: inline-block;
+    vertical-align: top;
+    width:fit-content
 }
 
-/*mobile view*/
- @media screen and (max-width: 600px) {
+.order-summary{
+   
+    display: inline-block;
+    vertical-align: top;
+    
+}
+
+#wrapper{
+    align-content: center;
+    text-align: center;
+    
+}
+
+
+  /*mobile view*/
+  @media screen and (max-width: 600px) {
     .order-summary {
-        width:350px;
+        width:relative;
         align-content: center;
         align-items: center;
         justify-content: center;
@@ -56,120 +53,149 @@ header{
     .shopping-cart{
         width:relative;
         align-content: center;
+        align-items: center;
+        justify-content: center;
         float:center;
     }
+
+    .product-description{
+        text-align: left;
+        width: 50%;
+
+    }
+
+    .product-picture{
+        width:80%;
+    }
+}
+
+    .product{
+        border-radius: 8px;
+        display: flex; 
+        background-color: white;
+        padding: 8px;
+        margin: 8px;
+        font: 'Open Sans'; 
+        position:flex ;
+        max-width:500px;
+
+        
+    }
     
-}
-
-.product{
-    border-radius: 8px;
-    display: flex; 
-    background-color: white;
-    padding: 8px;
-    margin: 8px;
-    margin-left: 50px;
-    font: 'Open Sans'; 
-    position: relative;
+    .product:hover{
+        border: none;
+        box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        transform: scale(1.01);
     
-}
+    }
+    
+    .name>a:link{
+        border: none;
+        transform: scale(1.01);
+        color:#3f3f3f;
+        text-decoration: none;
+    }
+    
+    .name>a:visited{
+        color:#3f3f3f;
+        text-decoration: none;
+    
+    }
+    
+    .name>a:hover{
+        border: none;
+        transform: scale(1.01);
+        color:#cc0009;
+    }
+    
+    .product-picture{
+        width: 50%;
+        height: relative;
+        object-fit: cover;
+        display:flex; 
+        padding: 10px;
+        position:relative;
+    }
+    
+    .product-description{
+        position: relative;
+        padding:10px;
+        font-family: 'Open Sans', sans-serif;
+        display: relative;
+        text-align: left;
+        width:fit-content;
+      
+    }
 
-.product:hover{
-    border: none;
-	box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-	transform: scale(1.01);
+    .order{
+        position: relative;
+        padding:10px;
+        font-family: 'Open Sans', sans-serif;
+        display: relative;
+        text-align: left;
+        width:block;
+    }
+    
+    .remove {
+        position:static;
+        display: flex;
+        bottom: 20px;
+        right: 20px;
+        padding: 10px 25px;
+        background-color: white;
+        color:#3f3f3f;
+        cursor: pointer;
+        border-radius: 5px;
+        width:relative;
+        height:relative;
+    
+    }
+    
+    .remove:hover, .checkout:hover, .back-to-shopping:hover{
+    
+        background-color: white;
+        color: #cc0009;
+        font-weight: 600;
+        border: 1px solid #cc0009;
+    
+    }
+    
+    .checkout, .back-to-shopping {
+        display:inline-block;
+        bottom: 20px;
+        right: 20px;
+        padding: 10px 25px;
+        background-color: white;
+        color:#3f3f3f;
+        border-radius: 5px;
+        cursor: pointer;
+        width:relative;
+        height:relative;
+        margin-bottom:10px;
+    
+    }
+    
+    .order{
+        border-radius: 8px;
+        text-align: center ;
+        background-color: #f0eded;
+        height: relative;
+        padding: 10px;
+        margin: 8px;
+        margin-left: 10px;
+        font: 'Open Sans'; 
+        color: #3f3f3f;
+        font-size: 20px;
+        width: relative;  
+    }
+    
+    .total{
+        color:#cc0009;
+    }
+    
+    input{
+        width: 90px;
+    
+    }
 
-}
-
-.name>a:link{
-    border: none;
-	transform: scale(1.01);
-    color:#3f3f3f;
-    text-decoration: none;
-}
-
-.name>a:visited{
-    color:#3f3f3f;
-    text-decoration: none;
-
-}
-
-.name>a:hover{
-    border: none;
-	transform: scale(1.01);
-    color:#cc0009;
-}
-
-.product-picture{
-    width: 200px;
-	height: relative;
-	object-fit: cover;
-    display:flex; 
-    padding: 10px;
-    position:relative;
-}
-
-.product-description, .order{
-  position: relative;
-  padding:10px;
-  font-family: 'Open Sans', sans-serif;
-  display: relative;
-
-  
-}
-
-.remove {
-	position:static;
-    display: flex;
-	bottom: 20px;
-	right: 20px;
-	padding: 10px 25px;
-	background-color: white;
-	color:#3f3f3f;
-	cursor: pointer;
-	border-radius: 5px;
-	width:relative;
-  	height:relative;
-
-}
-
-.remove:hover, .checkout:hover, .back-to-shopping:hover{
-
-	background-color: white;
-	color: #cc0009;
-	font-weight: 600;
-	border: 1px solid #cc0009;
-
-}
-
-.checkout, .back-to-shopping {
-    display:inline-block;
-    bottom: 20px;
-	right: 20px;
-	padding: 10px 25px;
-	background-color: white;
-	color:#3f3f3f;
-    border-radius: 5px;
-    cursor: pointer;
-	width:relative;
-    height:relative;
-    margin-bottom:10px;
-
-}
-
-.order{
-    border-radius: 8px;
-    text-align: center ;
-    background-color: #f0eded;
-    height: relative;
-    padding: 10px;
-    margin: 8px;
-    margin-left: 10px;
-    font: 'Open Sans'; 
-    color: #3f3f3f;
-    font-size: 20px;
-    width: relative;  
-}
-
-.total{
-    color:#cc0009;
 }
